[COMP] Fixed compositing with EXRs at different resolutions

--- a/apps/deploy_base/history.txt
+++ b/apps/deploy_base/history.txt
@@ -1,6 +1,10 @@
 # Version history for xComp
 
 2022/02/11
+1.0.1
+- Compositing now works with EXRs at multiple resolutions
+
+2022/02/11
 1.0.0
 - Formatted license file
 - First public version
