[COMP] Dropped file is now selected every time

--- a/apps/deploy_base/history.txt
+++ b/apps/deploy_base/history.txt
@@ -1,5 +1,9 @@
 # Version history for xComp
 
+2022/02/
+1.0.2
+- Dropped file is now selected every time
+
 2022/02/12
 1.0.1
 - Compositing now works with EXRs at multiple resolutions
