[COMP] Updated history.txt

--- a/apps/deploy_base/history.txt
+++ b/apps/deploy_base/history.txt
@@ -1,8 +1,8 @@
 # Version history for xComp
 
-2022/03/
+2022/03/07
 1.1.0
-- Added support for OpenColorIO
+- Added support for OpenColorIO color spaces
 - Configuration window changes are now applied immediately
 - Drag & drop now working when the config window is open
 
