--- a/apps/deploy_base/history.txt
+++ b/apps/deploy_base/history.txt
@@ -1,5 +1,9 @@
 # Version history for xComp
 
+2022/03/12
+1.1.1
+- Improved OpenColorIO support. Working well with Blender's config
+
 2022/03/07
 1.1.0
 - Added support for OpenColorIO color spaces
