[COMP] Updated history.txt

--- a/apps/deploy_base/history.txt
+++ b/apps/deploy_base/history.txt
@@ -1,8 +1,9 @@
 # Version history for xComp
 
-2022/03/
+2022/03/21
 1.1.4
-- Added history for scan directories and OpenColorIO config files
+- Added recent history of scan directory and OpenColorIO config paths
+- Now building with OpenColorIO on Linux and macOS
 
 2022/03/16
 1.1.3
