--- a/apps/deploy_base/history.txt
+++ b/apps/deploy_base/history.txt
@@ -3,6 +3,9 @@
 2022/03/21
 1.1.5
 - Added "Check for Updates..." menu entry
+- Modified text in main window's title bar
+- Updated About window
+
 2022/03/21
 1.1.4
 - Added recent history of scan directory and OpenColorIO config paths
